myteo/test/analyze/main_function/multiple_mains_same_file.myte
module Test

fun main() {}

fun main() {}